--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -110,6 +110,7 @@
 			<th>Diagnose</th>
 			<th ng-show='platform.isJDUL()'>Kann Schwimmen</th>
 			<th ng-show='platform.isJDUL()'>Darf allein nach Hause</th>
+			<th ng-show='platform.isJDUL()'>Kommentar Intern</th>
 			<th>Anmeldedatum</th>
 		</tr>
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
@@ -143,7 +144,8 @@
 			<td>{{reg.disabilityDescription}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canSwim)}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canGoHomeAllone)}}</td>
-			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>
+			<td ng-show='platform.isJDUL()'>{{reg.commentInternal}}</td>
+			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
 		</tr>
 		<tr><td></td><td></td><td></td><td colspan='8'>Summe:</td><td align='right'>{{calculateOverallFee(registrations)}}</td><td colspan='17'></td></tr>
 	</table>
