--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -41,6 +41,17 @@
 			</div>
 		</div>
 		<div class='row' style='margin-top:10px'>
+			<label for='receiptFilter' class='control-label col-sm-2'>ÜberweisungsNr:</label>
+			<div class='col-sm-5 input-group'>
+				<input id='nameFilter' class='form-control' type='text' ng-model='receiptFilter' />
+				<span class='input-group-btn'>
+					<button class='btn btn-info' ng-click='clearReceiptSelection()'>
+						<span class='glyphicon glyphicon-remove'></span>
+					</button>
+				</span>
+			</div>
+		</div>
+		<div class='row' style='margin-top:10px'>
 			<label for='yearFilter' class='control-label col-sm-2'>Jahr:</label>
 			<div class='col-sm-5 input-group'>
 				<input name='yearFilter' class='form-control' type='number' ng-model='yearFilter' min='2015' step='1' />
