--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -43,7 +43,7 @@
 		<div class='row' style='margin-top:10px'>
 			<label for='receiptFilter' class='control-label col-sm-2'>ÜberweisungsNr:</label>
 			<div class='col-sm-5 input-group'>
-				<input id='nameFilter' class='form-control' type='text' ng-model='receiptFilter' />
+				<input id='receiptFilter' class='form-control' type='text' ng-model='receiptFilter' />
 				<span class='input-group-btn'>
 					<button class='btn btn-info' ng-click='clearReceiptSelection()'>
 						<span class='glyphicon glyphicon-remove'></span>
