--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -1,7 +1,8 @@
 <div class='container'>
 <div class='row'>
     <div class='col-sm-10'>
-        <h2 class='text-orange'>{{'SELECTION.TITLE' | translate}}</h2>
+        <h2 ng-show="!platform.isKiso()" class='text-orange'>{{'SELECTION.TITLE' | translate}}</h2>
+        <h2 ng-show="platform.isKiso()" class='text-orange'>{{'SELECTION.TITLE_KISO' | translate}}</h2>
     </div>
     <div class='col-sm-2' ng-show='iSvc.isAuthorized("admin")'>
         <a class='btn btn-success btn-block' href='/#/newEvent' role='button'>Neu</a>
