--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -88,6 +88,7 @@
 	</div>
 	</div>
 
+	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 	<table class='table table-striped table-bordered tbl-serial3'>
 		<tr>
@@ -159,6 +160,70 @@
 			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
 		</tr>
 		<tr><td></td><td></td><td></td><td colspan='8'>Summe:</td><td align='right'>{{calculateOverallFee(registrations)}}</td><td colspan='17'></td></tr>
+	</table>
+	<table id='datatable' class='hidden'>
+		<tr>
+			<th>Programm</th>
+			<th>Woche</th>
+			<th>Vorname</th>
+			<th>Nachname</th>
+			<th>EbK</th>
+			<th>Einzahlung</th>
+			<th>Benachrichtigt</th>
+			<th>RechnungsNr</th>
+			<th>Betrag</th>
+			<th>Geburtstag</th>
+			<th>Schulstufe</th>
+			<th>Gesundheit</th>
+			<th>Adresse</th>
+			<th>Wohnort</th>
+			<th>Vorname Eltern</th>
+			<th>Nachname Eltern</th>
+			<th>Email Eltern</th>
+			<th>Tel. Eltern</th>
+			<th>Kontakt1</th>
+			<th>Tel. Kontakt1</th>
+			<th>Kontak2</th>
+			<th>Tel. Kontakt2</th>
+			<th>T-Shirt</th>
+			<th>Beeinträchtigung</th>
+			<th>Diagnose</th>
+			<th ng-show='platform.isJDUL()'>Kann Schwimmen</th>
+			<th ng-show='platform.isJDUL()'>Darf allein nach Hause</th>
+			<th ng-show='platform.isJDUL()'>Kommentar Intern</th>
+			<th>Anmeldedatum</th>
+		</tr>
+		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
+			<td>{{reg.activityId.eventId.location}} - {{reg.activityId.eventId.name}}</td>
+			<td>{{reg.activityId.name}}</td>
+			<td>{{reg.firstNameChild}}</td>
+			<td>{{reg.lastNameChild}}</td>
+			<td>{{formatBool(reg.needsEbK)}}</td>
+			<td ng-class='{"bg-success": reg.isPaymentDone, "bg-danger": !reg.isPaymentDone}'><input type='checkbox' ng-model='reg.isPaymentDone' ng-change='updateIsPaymentDone(reg._id, reg.isPaymentDone)' style='margin-right:8px' />{{formatBool(reg.isPaymentDone)}}</td>
+			<td ng-class='{"bg-success": reg.isEmailNotified, "bg-danger": !reg.isEmailNotified}'><input type='checkbox' ng-model='reg.isEmailNotified' ng-change='updateIsEmailNotified(reg._id, reg.isEmailNotified)' style='margin-right:8px' />{{formatBool(reg.isEmailNotified)}}</td>
+			<td>{{reg.receiptNumber}}</td>
+			<td align="right">{{calculateFee(reg)}}</td>
+			<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
+			<td>{{reg.schoolChild}}</td>
+			<td>{{reg.healthChild}}</td>
+			<td>{{reg.addressChild}}</td>
+			<td>{{reg.cityChild}}</td>
+			<td>{{reg.firstNameParent}}</td>
+			<td>{{reg.lastNameParent}}</td>
+			<td><a href='mailto:{{reg.emailParent}}'>{{reg.emailParent}}</a></td>
+			<td>{{reg.phoneNumberParent}}</td>
+			<td>{{reg.nameContact1}}</td>
+			<td>{{reg.telContact1}}</td>
+			<td>{{reg.nameContact2}}</td>
+			<td>{{reg.telContact2}}</td>
+			<td>{{reg.tShirtSize}}</td>
+			<td>{{formatBool(reg.hasDisability)}}</td>
+			<td>{{reg.disabilityDescription}}</td>
+			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canSwim)}}</td>
+			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canGoHomeAllone)}}</td>
+			<td ng-show='platform.isJDUL()'>{{reg.commentInternal}}</td>
+			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
+		</tr>
 	</table>
     <br />
     <div class='col-sm-6'>
