--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -2,7 +2,8 @@
 	<h2 class='text-orange'></h2>
 	<h3><span class='label label-default'>{{"MYRESERVATION.TITLE" | translate}}</span></h3>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'>
-		<div ng-show='!platform.isJDUL()'>{{"MYRESERVATION.NOTE" | translate}}</div>
+		<div ng-show='platform.isJugendsommer() || platform.isJDBL()'>{{"MYRESERVATION.NOTE" | translate}}</div>
+		<div ng-show='platform.isKiso()'>{{"MYRESERVATION.NOTE_KISO" | translate}}</div>
 	</div>
 	<table class='table table-striped table-bordered'>
 		<tr>
