--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -32,7 +32,7 @@
 		<div class='row' style='margin-top:10px'>
 			<label for='nameFilter' class='control-label col-sm-2'>Nachname:</label>
 			<div class='col-sm-5 input-group'>
-				<input id='nameFilter' class='form-control' type='text' ng-model='nameFilter' />
+				<input id='nameFilter' class='form-control' type='text' ng-model='nameFilter' ng-change='updateNameFilter()' />
 				<span class='input-group-btn'>
 					<button class='btn btn-info' ng-click='clearNameSelection()'>
 						<span class='glyphicon glyphicon-remove'></span>
@@ -43,7 +43,7 @@
 		<div class='row' style='margin-top:10px'>
 			<label for='firstnameFilter' class='control-label col-sm-2'>Vorname:</label>
 			<div class='col-sm-5 input-group'>
-				<input id='firstnameFilter' class='form-control' type='text' ng-model='firstnameFilter' />
+				<input id='firstnameFilter' class='form-control' type='text' ng-model='firstnameFilter' ng-change='updateFirstNameFilter()' />
 				<span class='input-group-btn'>
 					<button class='btn btn-info' ng-click='clearFirstNameSelection()'>
 						<span class='glyphicon glyphicon-remove'></span>
