--- a/public/templates/registration/registrationEdit.html
+++ b/public/templates/registration/registrationEdit.html
@@ -60,7 +60,8 @@
 	<div class='form-group' ng-class='{ "has-error": registrationForm.birthdayChild.$invalid }'>
 		<label for='birthdayChild' class='control-label col-sm-2'>Geburtstag</label>
 		<div class='col-sm-10'>
-			<ng-datepicker ng-model='birthdayChild' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
+			<ng-datepicker ng-show='!platform.isJDUL()' ng-model='birthdayChild' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
+			<input ng-show='platform.isJDUL()' type='date' ng-model='birthdayChild' required></input>
 		</div>
 	</div>
 	<!-- SCHOOLCHILD -->
