start batch update report

--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -111,7 +111,7 @@
 			<th>Vorname</th>
 			<th>Nachname</th>
 			<th>EbK</th>
-			<th>Einzahlung</th>
+			<th>Einzahlung<div><input type="checkbox" ng-model="masterIsPaymentDone" ng-change="batchUpdateIsPaymentDone()" /></div></th>
 			<th>Benachrichtigt</th>
 			<th>RechnungsNr</th>
 			<th>Betrag</th>
