--- a/public/templates/reportPresence.html
+++ b/public/templates/reportPresence.html
@@ -16,19 +16,6 @@
 				</span>
 			</div>
 		</div>
-		<div class='row' style='margin-top:10px'>
-			<label for='activityFilter' class='control-label col-sm-2'>Woche:</label>
-			<div class='col-sm-5 input-group'>
-				<select id='activityFilter' class='form-control' ng-model='activityIdFilter' ng-change='updateActivityFilter(false)'>
-					<option ng-repeat='activity in activities' value='{{activity._id}}'>{{activity.name}}</option>
-				</select>
-				<span class='input-group-btn'>
-					<button class='btn btn-info' ng-click='clearActivitySelection()'>
-						<span class="glyphicon glyphicon-remove"></span>
-					</button>
-				</span>
-			</div>
-		</div>
 		<div class="row" style='margin-top:10px'>
     	<div class='col-sm-offset-2 col-sm-4'>
       	<button type='button' class='btn btn-primary btn-block' ng-click='getReportData()'>Laden</button>
@@ -43,23 +30,27 @@
 	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 	<table class='table table-striped table-bordered tbl-serial3'>
+		<thead ng-repeat='grp in registrations'>
 		<tr>
-			<th>Programm</th>
-			<th>Woche</th>
+			<th>{{grp[0].activityId.eventId.location}} - {{grp[0].activityId.eventId.name}}</th>
+			<th>{{grp[0].activityId.name}}</th>
 			<th>Vorname</th>
 			<th>Nachname</th>
 			<th>Geburtstag</th>
-			<th ng-repeat='d in eventDuration'>
+			<th ng-repeat='d in grp[0].eventDuration'>
 				{{d}}
 			</th>
 		</tr>
-		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
-			<td>{{reg.activityId.eventId.location}} - {{reg.activityId.eventId.name}}</td>
-			<td>{{reg.activityId.name}}</td>
-			<td>{{reg.firstNameChild}}</td>
-			<td>{{reg.lastNameChild}}</td>
-			<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
-			<td ng-repeat='d in eventDuration'></td>
-		</tr>
+		</thead>
+		<tbody ng-repeat='grp in registrations'>
+			<tr ng-repeat='reg in grp'>
+				<td></td>
+				<td></td>
+				<td>{{reg.firstNameChild}}</td>
+				<td>{{reg.lastNameChild}}</td>
+				<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
+				<td ng-repeat='d in reg.eventDuration'> </td>
+			</tr>
+		</tbody>
 	</table>
 </div>
