--- a/public/templates/reportPresence.html
+++ b/public/templates/reportPresence.html
@@ -29,8 +29,9 @@
 
 	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-	<table class='table table-striped table-bordered tbl-serial3'>
-		<thead ng-repeat='grp in registrations'>
+	<table id="datatable" class='table table-bordered'>
+		<table class='table table-striped table-bordered'  ng-repeat='grp in registrations'>
+		<thead>
 		<tr>
 			<th>{{grp[0].activityId.eventId.location}} - {{grp[0].activityId.eventId.name}}</th>
 			<th>{{grp[0].activityId.name}}</th>
@@ -42,7 +43,7 @@
 			</th>
 		</tr>
 		</thead>
-		<tbody ng-repeat='grp in registrations'>
+		<tbody>
 			<tr ng-repeat='reg in grp'>
 				<td></td>
 				<td></td>
@@ -52,5 +53,6 @@
 				<td ng-repeat='d in reg.eventDuration'> </td>
 			</tr>
 		</tbody>
+	</table>
 	</table>
 </div>
