--- a/public/templates/shop/reservation.html
+++ b/public/templates/shop/reservation.html
@@ -85,6 +85,44 @@
                                         <option ng-repeat='a in articles' value='{{a}}'>{{a}}</option>
                                     </select>
                                 </div>
+                                <br />
+                                <div ng-show="type === 'bus'" class="container">
+                                    <!-- START -->
+                                    <div class='form-group' ng-class='{ "has-error": reservationForm.start.$invalid }'>
+                                        <label for='start' class='control-label col-sm-2'>Ausgangspunkt</label>
+                                        <div class='col-sm-8'>
+                                            <input name='start' type='text' ng-model='start' class='form-control'></input>
+                                        </div>
+                                    </div>
+                                    <!-- DESTINATION -->
+                                    <div class='form-group' ng-class='{ "has-error": reservationForm.destination.$invalid }'>
+                                        <label for='destination' class='control-label col-sm-2'>Ziel/in</label>
+                                        <div class='col-sm-8'>
+                                            <input name='destination' type='text' ng-model='destination' class='form-control' ></input>
+                                        </div>
+                                    </div>
+                                    <!-- STARTTIME -->
+                                    <div class='form-group' ng-class='{ "has-error": reservationForm.startTime.$invalid }'>
+                                        <label for='startTime' class='control-label col-sm-2'>Start-Zeit/in</label>
+                                        <div class='col-sm-8'>
+                                            <input name='startTime' type='string' ng-model='startTime' class='form-control'></input>
+                                        </div>
+                                    </div>
+                                    <!-- STARTTIME -->
+                                    <div class='form-group' ng-class='{ "has-error": reservationForm.endTime.$invalid }'>
+                                        <label for='endTime' class='control-label col-sm-2'>EndZeit/in</label>
+                                        <div class='col-sm-8'>
+                                            <input name='endTime' type='string' ng-model='endTime' class='form-control'></input>
+                                        </div>
+                                    </div>
+                                    <!-- PARTICIPANTS -->
+                                    <div class='form-group' ng-class='{ "has-error": reservationForm.participants.$invalid }'>
+                                        <label for='participants' class='control-label col-sm-2'>Teilnehmer/in</label>
+                                        <div class='col-sm-8'>
+                                            <input name='participants' type='number' ng-model='participants' class='form-control'></input>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <br />
                                 <button class='btn btn-lg btn-success' ng-click='setState(3)' ng-disabled='!IsSecondTabComplete()'>
