bug watch correct type

--- a/public/templates/shop/reservation.html
+++ b/public/templates/shop/reservation.html
@@ -86,7 +86,7 @@
                                     </select>
                                 </div>
                                 <br />
-                                <div ng-show="type === 'bus'" class="container">
+                                <div ng-show="type === 'Bus'" class="container">
                                     <!-- START -->
                                     <div class='form-group' ng-class='{ "has-error": reservationForm.start.$invalid }'>
                                         <label for='start' class='control-label col-sm-2'>Ausgangspunkt</label>
