--- a/public/templates/reportOverview.html
+++ b/public/templates/reportOverview.html
@@ -30,27 +30,43 @@
 	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 	<table id="datatable" class='table table-bordered'>
-		<table class='table table-striped table-bordered'  ng-repeat='grp in registrations'>
+		<table class='table table-striped table-bordered'>
 		<thead>
 		<tr>
-			<th>{{grp[0].activityId.eventId.location}} - {{grp[0].activityId.eventId.name}}</th>
-			<th>{{grp[0].activityId.name}}</th>
+			<th>{{registrations[0].event}}</th>
 			<th>Vorname</th>
 			<th>Nachname</th>
 			<th>Geburtstag</th>
-			<th ng-repeat='d in grp[0].eventDuration'>
-				{{d}}
+			<th>Klasse</th>
+			<th>Strasse</th>
+			<th>Wohnort</th>
+			<th>Telefon</th>
+			<th>Gesundheit</th>
+			<th>Schwimmen</th>
+			<th>allein Nachhause</th>
+			<th>sonstige Infos</th>
+			<th ng-repeat='a in activities'>
+				{{a.name}}
 			</th>
 		</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat='reg in grp'>
-				<td></td>
+			<tr ng-repeat='reg in registrations'>
 				<td></td>
 				<td>{{reg.firstNameChild}}</td>
 				<td>{{reg.lastNameChild}}</td>
 				<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
-				<td ng-repeat='d in reg.eventDuration'> </td>
+				<td>{{reg.schoolChild}}</td>
+				<td>{{reg.addressChild}}</td>
+				<td>{{reg.cityChild}}</td>
+				<td>{{reg.phoneNumberParents}}</td>
+				<td>{{reg.healthChild}}</td>
+				<td>{{formatBool(reg.canSwim)}}</td>
+				<td>{{formatBool(reg.canGoHomeAllone)}}</td>
+				<td>{{reg.commentInternal}}</td>
+				<td ng-repeat='a in activities'>
+					{{formatBoolToSymbol(reg[a._id])}}
+				</td>
 			</tr>
 		</tbody>
 	</table>
