--- a/public/templates/reportOverview.html
+++ b/public/templates/reportOverview.html
@@ -29,8 +29,7 @@
 
 	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-	<table id="datatable" class='table table-bordered'>
-		<table class='table table-striped table-bordered'>
+	<table id="datatable" class='table table-striped table-bordered'>
 		<thead>
 		<tr>
 			<th>{{registrations[0].event}}</th>
@@ -69,6 +68,5 @@
 				</td>
 			</tr>
 		</tbody>
-	</table>
 	</table>
 </div>
