change authorization for myCommitments

--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -2,7 +2,7 @@
 	<h2 class='text-orange'>Rechnungen</h2>
 
 	<div class='container col-sm-9'>
-	<div class='panel panel-default' ng-show='iSvc.isAuthorized("admin")'>
+	<div class='panel panel-default'>
 	<div class='panel-heading'>Filter</div>
 	<div class='panel-body'>
 		<div class='row'>
