--- a/public/templates/shop/calendar.html
+++ b/public/templates/shop/calendar.html
@@ -1,40 +1,63 @@
 <div class='container'>
-    <div class='row'>
-        <div class='col-sm-10'>
-            <h2 class='text-orange'>Kalender</h2>
-        </div>
-    </div>
-    <div class='row'>
-        <label for='fromFilter' class='control-label col-sm-2'>Von:</label>
-        <div class='col-sm-4 input-group'>
-            <p class='input-group'>
-                <ng-datepicker ng-model='from' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
-            </p>
-        </div>
-        <label for='toFilter' class='control-label col-sm-2'>Bis:</label>
-        <div class='col-sm-4 input-group'>
-            <p class='input-group'>
-                <ng-datepicker ng-model='to' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
-            </p>
-        </div>
-    </div>
-    <div class='row'>
-        <label for='locationFilter' class='control-label col-sm-2'>Einsatzort:</label>
-        <div class='col-sm-4 input-group'>
-            <p class='input-group'>
-                <input type="text" ng-model='location'></input>
-            </p>
-        </div>
-        <label for='lenderFilter' class='control-label col-sm-2'>Ausleiher/in:</label>
-        <div class='col-sm-4 input-group'>
-            <p class='input-group'>
-                <input type="text" ng-model='lender'></input>
-            </p>
-        </div>
-    </div>
-    <div class="row" style='margin-top:10px'>
-        <div class='col-sm-offset-2 col-sm-4'>
-          <button type='button' class='btn btn-primary btn-block' ng-click='find(from, to, articleId, location, lender)'>Laden</button>
+    <div class='container col-sm-9'>
+        <div class='panel panel-default'>
+            <div class='panel-heading'>Filter</div>
+            <div class='panel-body'>
+                <div class='row'>
+                    <label for='fromFilter' class='control-label col-sm-2'>Von:</label>
+                    <div class='col-sm-5 input-group'>
+                        <p class='input-group'>
+                            <ng-datepicker ng-model='from' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
+                         </p>
+                    </div>
+                </div>
+                <div class='row'>
+                    <label for='toFilter' class='control-label col-sm-2'>Bis:</label>
+                    <div class='col-sm-5 input-group'>
+                        <p class='input-group'>
+                            <ng-datepicker ng-model='to' view-format="DD.MM.YYYY"  locale='de' required ></ng-datepicker>
+                        </p>
+                    </div>
+                </div>
+                <div class='row'>
+                    <label for='locationFilter' class='control-label col-sm-2'>Einsatzort:</label>
+                    <div class='col-sm-5 input-group'>
+                        <input type="text" ng-model='location' class='form-control'></input>
+                        <span class='input-group-btn'>
+                            <button class='btn btn-info' ng-click='clearLocationSelection()'>
+                                <span class='glyphicon glyphicon-remove'></span>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+                <div class='row'>                            
+                    <label for='lenderFilter' class='control-label col-sm-2'>Ausleiher/in:</label>
+                    <div class='col-sm-5 input-group'>
+                        <input type="text" ng-model='lender' class='form-control'></input>
+                        <span class='input-group-btn'>
+                            <button class='btn btn-info' ng-click='clearLenderSelection()'>
+                                <span class='glyphicon glyphicon-remove'></span>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+                <div class='row'>                            
+                        <label for='articleFilter' class='control-label col-sm-2'>Artikel:</label>
+                        <div class='col-sm-5 input-group'>
+                            <input type="text" ng-model='article' class='form-control'></input>
+                            <span class='input-group-btn'>
+                                <button class='btn btn-info' ng-click='clearArticleSelection()'>
+                                    <span class='glyphicon glyphicon-remove'></span>
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                <div class="row" style='margin-top:10px'>
+                    <div class='col-sm-offset-2 col-sm-4'>
+                        <button type='button' class='btn btn-primary btn-block' ng-click='find(from, to, articleId, location, lender)'>Laden</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
