add jungschar gries

--- a/public/templates/info/info.html
+++ b/public/templates/info/info.html
@@ -8,3 +8,5 @@
 
 <div ng-show="platform.isTest() && lang == 'de'"><div ng-include src="'templates/info/info-jdul-de.html'"></div></div>
 <div ng-show="platform.isTest() && lang == 'it'"><div ng-include src="'templates/info/info-jdul-it.html'"></div></div>
+
+<div ng-show="platform.isJSGries()"><div ng-include src="'templates/info/info-jsgries-de.html'"></div></div>
