--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -275,6 +275,8 @@
 										
 									<div ng-show="platform.isTest() && lang == 'de'" ng-include src='"templates/agb/agb-jdul-de.html"'></div>
 									<div ng-show="platform.isTest() && lang == 'it'" ng-include src='"templates/agb/agb-jdul-it.html"'></div>
+									
+									<div ng-show="platform.isJSGries()" ng-include src='"templates/agb/agb-jsgries-de.html"'></div>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="close btn btn-warning" data-dismiss="modal" aria-label="Close">Zur&uuml;ck</button>
