jsgries layout info page

--- a/public/templates/info/info-jsgries-de.html
+++ b/public/templates/info/info-jsgries-de.html
@@ -1,3 +1,4 @@
+<div class='container'>
 <h4>Die Anschrift des Lagers lautet:</h2> 
 Johannes Nepomuk Baron di Pauli<br />
 Oberfennberg 1<br />
@@ -10,7 +11,7 @@ Oberfennberg 1<br />
 <p>Die Anmeldefrist endet am <strong>25. Mai 2018!</strong></p>
 <p>Die Überweisungsbestätigung bitte per Email zustellen: Kathi14be@gmail.com</p>
 
-<strong>Das Konto lautet:</strong>
+<strong>Das Konto lautet:</strong><br />
 Katholische Jungschar Südtirols<br />
 Ortsgruppe Gries<br />
 IBAN: IT 59 N 08081 11601 000301002490<br />
@@ -32,3 +33,4 @@ IBAN: IT 59 N 08081 11601 000301002490<br />
 
 <h4>Was du nicht mitzunehmen brauchst:</h4>
 <ul><li>Alle elektronischen Geräte (Handy, Laptop…)</li></ul>
+</div>
