jsgries layout agb

--- a/public/templates/agb/agb-jsgries-de.html
+++ b/public/templates/agb/agb-jsgries-de.html
@@ -1,5 +1,6 @@
 <div class="container">
-	<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
+    <h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
+    <div class='col-sm-9'>
 	<ol>
         <li><strong>Datenschutz</strong>
             <p>Wir informieren, dass personenbezogen Daten der/des Teilnehmerin/ers seitens der katholischen Jungschar Südtirols, Inhaberin der gegenständlichen Datenverarbeitung, im Sinne des Gesetzesvertretenden Dekrets Nr.196/03 verarbeitet werden.</p>
@@ -8,4 +9,5 @@
             <p>Die vollständige Aufklärung, welche die gegenständliche zusammengefasste Aufklärung ergänzt, kann auf unserer Website <a href="http://www.jungschar.it/kjs/burokratische-downloads/datenschutzkodex/">http://www.jungschar.it/kjs/burokratische-downloads/datenschutzkodex/</a>abgerufen werden.</p>
         </li>
     </ol>
+    </div>
 </div>
