--- a/public/templates/info/info-jsgries-de.html
+++ b/public/templates/info/info-jsgries-de.html
@@ -2,11 +2,11 @@
 <h4>Die Anschrift des Lagers lautet:</h2> 
 Johannes Nepomuk Baron di Pauli<br />
 Oberfennberg 1<br />
-39040 Kurtatsch<br />
+39040 Kurtatsch<br /><br />
 <p>Die Anfahrt zum Zeltlager erfolgt über das Dorf Kurtatsch, danach ist den Hinweisschildern „Fennberg“ zu folgen. An der richtigen Abzweigung werden wir dann ein Sonderhinweisschild anbringen.</p>
 <p>Falls jemand in der Lage sein sollte, Obst, Gemüse, Marmelade, Ragout oder andere Lebensmittel (Kuchen) zur Verfügung zu stellen, so danken wir jetzt schon dafür. Wenn möglich bei Anmeldung mitteilen.</p>
 
-<h4>ANMELDUNG</h4>
+<h4>Anmeldung</h4>
 <p>Die Anmeldung erfolgt durch die Abgabe der Eigenverantwortlichen Erklärung der Eltern und des unteren Abschnittes, sowie durch die Zahlung des Beitrages.</p>
 <p>Die Anmeldefrist endet am <strong>25. Mai 2018!</strong></p>
 <p>Die Überweisungsbestätigung bitte per Email zustellen: Kathi14be@gmail.com</p>
