bug fix reservation needsEbk

--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -191,7 +191,7 @@
 						</div>
 						<!-- NEEDSAbK -->
 						<div ng-show='!isKiso && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4'>
-							<input type='checkbox' name='needsAbK' ng-model='needsAbK'><strong>{{"RESERVATION.LABEL_ABK_CHILD" | translate}}</input>
+							<input type='checkbox' name='needsEbK' ng-model='needsEbK'><strong>{{"RESERVATION.LABEL_ABK_CHILD" | translate}}</input>
 						</div>
 						<br />
 						<button class='btn btn-lg btn-success' ng-click='setState(2)' ng-disabled='!isChildDataComplete()'>
